fix: code overflow

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ main {
 code {
     display: inline-block;
     width: 300px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .first_col {
